# VideoPipe

./: .gitignore  CMakeLists.txt  README.md  README0.md  README_CN.md  README_EN.md  README_en.md  SAMPLES.md  readme.md  vcpkg.md
Extractor/: CMakeLists.txt  README.md  video_extractor.cpp
ba/: vp_ba_analyser.cpp  vp_ba_analyser.h  vp_ba_crossline_analyser.cpp  vp_ba_crossline_analyser.h  vp_ba_enter_analyser.cpp  vp_ba_enter_analyser.h  vp_ba_flag.h  vp_ba_stop_analyser.cpp  vp_ba_stop_analyser.h
doc/: about.md  env.md  env.txt  sample.md
excepts/: vp_invalid_argument_error.h  vp_invalid_calling_error.h  vp_invalid_pipeline_error.h  vp_not_implemented_error.h
main/: VP.h  main  main.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  main14.cpp  main15.cpp  main16  main16.cpp  main2.cpp  main3  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp  test.cpp
main/models/: imagenet_1000labels1.txt  pedstrain_2_classes.txt  vehicles_3_classes.txt  yolov3_5classes.txt
nodes/: README.md  readme.md  videopipe.i  videopipe_cs.i  vp_app_des_node.cpp  vp_app_des_node.h  vp_app_src_node.cpp  vp_app_src_node.h  vp_ba_node.cpp  vp_ba_node.h  vp_des_node.cpp  vp_des_node.h  vp_fake_des_node.cpp  vp_fake_des_node.h  vp_ffmpeg_des_node.cpp  vp_ffmpeg_des_node.h  vp_ffmpeg_src_node.cpp  vp_ffmpeg_src_node.h  vp_file_des_node.cpp  vp_file_des_node.h  vp_file_src_node.cpp  vp_file_src_node.h  vp_image_des_node.cpp  vp_image_des_node.h  vp_image_src_node.cpp  vp_image_src_node.h  vp_infer_node.cpp  vp_infer_node.h  vp_message_broker_node.cpp  vp_message_broker_node.h  vp_meta_hookable.h  vp_meta_publisher.cpp  vp_meta_publisher.h  vp_meta_subscriber.cpp  vp_meta_subscriber.h  vp_node.cpp  vp_node.h  vp_placeholder_node.cpp  vp_placeholder_node.h  vp_primary_infer_node.cpp  (+27 more)
nodes/ba/: README.md  vp_ba_crossline_node.cpp  vp_ba_crossline_node.h  vp_ba_jam_node.cpp  vp_ba_jam_node.h  vp_ba_stop_node.cpp  vp_ba_stop_node.h
nodes/broker/: vp_ba_socket_broker_node.cpp  vp_ba_socket_broker_node.h  vp_embeddings_properties_socket_broker_node.cpp  vp_embeddings_properties_socket_broker_node.h  vp_embeddings_socket_broker_node.cpp  vp_embeddings_socket_broker_node.h  vp_expr_socket_broker_node.cpp  vp_expr_socket_broker_node.h  vp_json_console_broker_node.cpp  vp_json_console_broker_node.h  vp_json_kafka_broker_node.cpp  vp_json_kafka_broker_node.h  vp_msg_broker_node.cpp  vp_msg_broker_node.h  vp_plate_socket_broker_node.cpp  vp_plate_socket_broker_node.h  vp_xml_file_broker_node.cpp  vp_xml_file_broker_node.h  vp_xml_socket_broker_node.cpp  vp_xml_socket_broker_node.h
nodes/ffio/: ff_common.cpp  ff_common.h  ff_des.cpp  ff_des.h  ff_src.cpp  ff_src.h  vp_ff_des_node.cpp  vp_ff_des_node.h  vp_ff_src_node.cpp  vp_ff_src_node.h
nodes/infers/: README.md  readme.md  vp_classifier_node.cpp  vp_classifier_node.h  vp_enet_seg_node.cpp  vp_enet_seg_node.h  vp_face_swap_node.cpp  vp_face_swap_node.h  vp_feature_encoder_node.cpp  vp_feature_encoder_node.h  vp_lane_detector_node.cpp  vp_lane_detector_node.h  vp_mask_rcnn_detector_node.cpp  vp_mask_rcnn_detector_node.h  vp_mllm_analyser_node.cpp  vp_mllm_analyser_node.h  vp_openpose_detector_node.cpp  vp_openpose_detector_node.h  vp_ppocr_text_detector_node.cpp  vp_ppocr_text_detector_node.h  vp_restoration_node.cpp  vp_restoration_node.h  vp_sface_feature_encoder_node.cpp  vp_sface_feature_encoder_node.h  vp_trt_vehicle_color_classifier.cpp  vp_trt_vehicle_color_classifier.h  vp_trt_vehicle_detector.cpp  vp_trt_vehicle_detector.h  vp_trt_vehicle_feature_encoder.cpp  (+23 more)
objects/: vp_control_meta.cpp  vp_control_meta.h  vp_frame_face_target.cpp  vp_frame_face_target.h  vp_frame_meta.cpp  vp_frame_meta.h  vp_frame_pose_target.cpp  vp_frame_pose_target.h  vp_frame_target.cpp  vp_frame_target.h  vp_frame_text_target.cpp  vp_frame_text_target.h  vp_image_record_control_meta.cpp  vp_image_record_control_meta.h  vp_meta.cpp  vp_meta.h  vp_sub_target.cpp  vp_sub_target.h  vp_video_record_control_meta.cpp  vp_video_record_control_meta.h
sample/: 1-1-1_sample.cpp  1-1-N_sample.cpp  1-N-N_sample.cpp  N-1-N_sample.cpp  N-N_sample.cpp  README.md  VP.h  app_src_sample.cpp  ba_crossline_sample.cpp  ba_jam_sample.cpp  ba_stop_sample.cpp  body_scan_and_plate_detect_sample.cpp  dynamic_pipeline_sample.cpp  dynamic_pipeline_sample2.cpp  enet_seg_sample.cpp  face_tracking_sample.cpp  image_des_sample.cpp  image_src_sample.cpp  interaction_with_pipe_sample.cpp  mask_rcnn_sample.cpp  message_broker_sample.cpp  message_broker_sample2.cpp  multi_detectors_and_classifiers_sample.cpp  multi_trt_infer_nodes_sample.cpp  openpose_sample.cpp  paddle_infer_sample.cpp  plate_recognize_sample.cpp  record_sample.cpp  rtsp_des_sample.cpp  src_des_sample.cpp  trt_infer_sample.cpp  vehicle_body_scan_sample.cpp  vehicle_cluster_based_on_classify_encoding_sample.cpp  vehicle_tracking_sample.cpp  vp_logger_sample.cpp
samples/: 1-1-1_sample.cpp  1-1-N_sample.cpp  1-N-1_sample.cpp  1-N-1_sample2.cpp  1-N-1_sample3.cpp  1-N-N_sample.cpp  CMakeLists.txt  N-1-N_sample.cpp  N-N_sample.cpp  README.md  app_des_sample.cpp  app_src_des_sample.cpp  app_src_sample.cpp  ba_crossline_sample.cpp  ba_jam_sample.cpp  ba_stop_sample.cpp  body_scan_and_plate_detect_sample.cpp  dynamic_pipeline_sample.cpp  dynamic_pipeline_sample2.cpp  enet_seg_sample.cpp  face_swap_sample.cpp  face_tracking_sample.cpp  ffmpeg_src_des_sample.cpp  ffmpeg_transcode_sample.cpp  firesmoke_detect_sample.cpp  frame_fusion_sample.cpp  image_des_sample.cpp  image_src_sample.cpp  interaction_with_pipe_sample.cpp  lane_detect_sample.cpp  mask_rcnn_sample.cpp  message_broker_kafka_sample.cpp  message_broker_sample.cpp  message_broker_sample2.cpp  mllm_analyse_sample.cpp  mllm_analyse_sample_openai.cpp  mllm_analyse_sample_openai_video.cpp  mllm_analyse_sample_openai_video_ex.cpp  multi_detectors_and_classifiers_sample.cpp  multi_detectors_sample.cpp  (+22 more)
scripts/: release.sh
swig/: vp_node.i
utils/: config_reader.cpp  config_reader.h  vp_gate.h  vp_pipe_checker.h  vp_semaphore.h  vp_utils.h  vp_version.h.in
(+129 files in other folders)
